starspan ChangeLog
$Id$
                                    

2005-04-26 (0.98beta)
	Changes committed.
	Removed temporary NEW-SOURCES-PENDING-MERGE-COMMIT/.
	Pending: configure regeneration.
	
2005-04-21 (*****  to-be 0.98beta   )
	Traverser: Finally implemented a flood-filling algorithm to 
	rasterize polygons. Temporary source files:(*)
		NEW-SOURCES-PENDING-MERGE-COMMIT/traverser/traverser.h
		NEW-SOURCES-PENDING-MERGE-COMMIT/traverser/traverser.cc
		
	Other minor changes also pending for merge and commit:
		NEW-SOURCES-PENDING-MERGE-COMMIT/starspan_countbyclass.cc
		
	(*) cvs repository (on casil) is down now, so I'll wait
	    until it's up again to update and commit actual sources... 

2005-04-08 (0.97beta)
	Setting up GNU build scheme:
	
	File renamings:
		DEVNOTES.txt --> ChangeLog
		README.txt   --> README
		INSTALL.txt   --> INSTALL
		starspan     --> starspan.in
	New files:
		configure.in
		Makefile.am
		AUTHORS
		COPYING
		NEWS
		THANKS
	Removed files:
		Makefile.props.templ 
		Makefile.props.fink
		

2005-04-04
	New BUILD.windows.txt with notes about compiling the whole
	system in windows

2005-03-23 (0.963beta)
	Makefile.props.templ: GDAL_SRC_DIR removed: we don't
	need this any more as GDAL (from 1.2.6) already installs
	vrtdataset.h in GDAL's PREFIX/include/.
	
	traverser.cc: Fixed a bug related to rerunning a traversal
	on new rasters. In particular starspan_csv.cc works on a
	raster at a time. The symptom was that the first specified
	raster was processed OK but not the others in a command line
	like this:
	   starspan --raster R1 R2 ... --vector V --csv my.csv
	The fix was in Traverser.removeRasters to add a call to
	globalInfo.rasterPoly.empty(), which empties the contents
	of the rasterPoly, so when addRaster is called, it gets
	the new ring from the first given raster.
	The news for end users is to say something like:
	  Fixed a bug in --csv command on multiple rasters which
	  made only the first given raster to be properly processed.
	  