@@ -2,6 +2,15 @@ starspan ChangeLog
 $Id$
                                     
 
+2005-04-28 (0.98beta)
+	Quadtree algorithm implemented for polygon rasterization:
+	New traverser/polyqt.cc.
+	Preliminary tests OK. The speedup over the flood-fill algorithm
+	with a polygon that	contains 22860 pixels is:
+	   time(flood-fill) / time(quadtree) = 98s/4s = 24.5 (!)
+	TODO: More tests; Check possible memory leak; check the other
+	goemetry types resulting from intersections that are ignored. 
+	
 2005-04-26 (0.98beta)
 	Changes committed.
 	Removed temporary NEW-SOURCES-PENDING-MERGE-COMMIT/.
